--- a/e6/index/index.html
+++ b/e6/index/index.html
@@ -546,6 +546,17 @@
       <div class="block-1"></div>
       <div class="block-2"></div>
       <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
     </div>
   </body>
 </html>
