--- a/e6/index/index3.html
+++ b/e6/index/index3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>exercise 6</title>
-    <link href="css/main3.css" rel="stylesheet">
+    <link href="../css/main3.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
