--- a/e6/index/index2.html
+++ b/e6/index/index2.html
@@ -502,6 +502,14 @@
       <div class="block-2"></div>
       <div class="block-3"></div>
       <div class="block-4"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-4"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-4"></div>
     </div>
   </body>
 </html>
