--- a/e6/index/index3.html
+++ b/e6/index/index3.html
@@ -507,6 +507,34 @@
       <div class="block-1"></div>
       <div class="block-2"></div>
       <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
+      <div class="block-2"></div>
+      <div class="block-3"></div>
+      <div class="block-1"></div>
     </div>
   </body>
 </html>
