--- a/e6/index/index5.html
+++ b/e6/index/index5.html
@@ -3,6 +3,7 @@
   <head>
     <title>exercise 6</title>
     <link href="../css/main5.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
