--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <title>Alexandra Middlebrooks</title>
       <link href="css/main.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Alex's Work</h1>
