--- a/e8/index2.html
+++ b/e8/index2.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Alexandra Middlebrooks</title>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main2.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <div class="header"></div>
       <div class="subhead"></div>
+      <div class="column"></div>
+      <div class="column2"></div>
       <div class="column"></div>
       <div class="footer"></div>
     </div>
