--- a/e8/index3.html
+++ b/e8/index3.html
@@ -8,11 +8,12 @@
   <body>
     <div class="container">
       <div class="header"></div>
-      <div class="subhead"></div>
-      <div class="column"></div>
-      <div class="column2"></div>
-      <div class="column"></div>
-      <div class="footer"></div>
+      <div class="pic"></div>
+      <div class="caption"></div>
+      <div class="text"></div>
+      <div class="pic"></div>
+      <div class="caption"></div>
+      <div class="text"></div>
     </div>
   </body>
 </html>
