--- a/Project 2/index/openingindex.html
+++ b/Project 2/index/openingindex.html
@@ -9,5 +9,6 @@
     <h1>Project 2</h1>
     <ul>
       <li><a href="index.html">Wireframes</a></li>
+      <li><a href="index2.html">First Draft</a></li>
   </body>
 </html>
