--- a/e8/index3.html
+++ b/e8/index3.html
@@ -13,7 +13,7 @@
       <div class="text"></div>
       <div class="pic"></div>
       <div class="caption"></div>
-      <div class="text"></div>
+      <div class="text2"></div>
     </div>
   </body>
 </html>
