--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <li><a href="e9/index.html">exercise 9</a></li>
       <li><a href="e10/index.html">exercise 10</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
-      <li><a href="Project2/openingindex.html">project 2</a></li>
+      <li><a href="Project2/index/openingindex.html">project 2</a></li>
   </body>
 </html>
