--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a href="e8/openingindex.html">exercise 8</a></li>
       <li><a href="e9/index.html">exercise 9</a></li>
       <li><a href="e10/index.html">exercise 10</a></li>
+      <li><a href="e11/index.html">exercise 11</a></li>
       <li><a href="Project1/index.html">project 1</a></li>
       <li><a href="Project 2/index/openingindex.html">project 2</a></li>
   </body>
