--- a/e8/index4.html
+++ b/e8/index4.html
@@ -7,12 +7,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="header"></div>
-      <div class="subhead"></div>
-      <div class="column"></div>
-      <div class="column2"></div>
-      <div class="column"></div>
-      <div class="footer"></div>
+      <div class="left"></div>
+      <div class="top"></div>
+      <div class="right"></div>
+      <div class="leftsquare"></div>
+      <div class="rightsquare"></div>
+      <div class="left"></div>
+      <div class="top"></div>
+      <div class="right"></div>
+      <div class="leftsquare"></div>
+      <div class="rightsquare"></div>
     </div>
   </body>
 </html>
