--- a/e8/index5_2.html
+++ b/e8/index5_2.html
@@ -23,6 +23,16 @@
         <div class="thin"></div>
         <div class="short"></div>
         <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <!-- row 3 -->
+        <div class="medium"></div>
+        <div class="thin"></div>
+        <div class="thin"></div>
+        <div class="thin"></div>
+        <div class="thin"></div>
+        <div class="thin"></div>
+        <div class="thin"></div>
       </div>
       <div class="container3">
         <div class="short"></div>
