--- a/e8/openingindex.html
+++ b/e8/openingindex.html
@@ -12,7 +12,7 @@
       <li><a href="index2.html">3 Column Grid (with header and footer)</a></li>
       <li><a href="index3.html">Blog Layout (with header)</a></li>
       <li><a href="index4.html">Tennis Court</a></li>
-      <li><a href="index5.html">California Case</a></li>
+      <li><a href="index5_2.html">California Case</a></li>
     </ul>
   </body>
 </html>
