--- a/e8/index5_2.html
+++ b/e8/index5_2.html
@@ -7,6 +7,32 @@
   </head>
   <body>
     <div class="container">
+      <div class="container1">
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="tall"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="thin"></div>
+        <div class="medium"></div>
+        <div class="medium"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="thin"></div>
+        <div class="medium"></div>
+        <div class="medium"></div>
+        <div class="medium"></div>
+        <div class="short"></div>
+        <div class="short"></div>
+        <div class="thin"></div>
+        <div class="medium"></div>
+        <div class="medium"></div>
+        <div class="medium"></div>
+      </div>
       <div class="container2">
         <div class="short"></div>
         <div class="short"></div>
