--- a/Project 2/index/openingindex.html
+++ b/Project 2/index/openingindex.html
@@ -10,5 +10,7 @@
     <ul>
       <li><a href="index.html">Wireframes</a></li>
       <li><a href="index2.html">First Draft</a></li>
+      <li><a href="index3.html">Second Draft</a></li>
+    </ul>
   </body>
 </html>
