--- a/e8/index4_corrected.html
+++ b/e8/index4_corrected.html
@@ -2,25 +2,18 @@
 <html>
   <head>
     <title>Alexandra Middlebrooks</title>
-    <link href="css/main4.css" rel="stylesheet">
+    <link href="css/main4_corrected.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <div class="container2">
-        <div class="left"></div>
-        <div class="top"></div>
-        <div class="leftsquare"></div>
-        <div class="rightsquare"></div>
-        <div class="right"></div>
-      </div>
-      <div class="container3">
-        <div class="left2"></div>
-        <div class="leftsquare2"></div>
-        <div class="rightsquare2"></div>
-        <div class="top2"></div>
-        <div class="right2"></div>
-      </div>
+    <div class="court">
+        <div class="side"></div>
+        <div class="single">
+          <div class="back"></div>
+          <div class="service"></div>
+          <div class="service"></div>
+        </div>
+        <div class="side"></div>
     </div>
   </body>
 </html>
