--- a/e8/openingindex.html
+++ b/e8/openingindex.html
@@ -13,6 +13,7 @@
       <li><a href="index3.html">Blog Layout (with header)</a></li>
       <li><a href="index4.html">Tennis Court</a></li>
       <li><a href="index5_2.html">California Case</a></li>
+      <li><a href="index4_corrected.html">Tennis Court Corrected</a></li>
     </ul>
   </body>
 </html>
