--- a/e8/index4_corrected.html
+++ b/e8/index4_corrected.html
@@ -14,6 +14,13 @@
           <div class="service"></div>
         </div>
         <div class="side"></div>
+        <div class="side"></div>
+        <div class="single">
+          <div class="service"></div>
+          <div class="service"></div>
+          <div class="back"></div>
+        </div>
+        <div class="side"></div>
     </div>
   </body>
 </html>
