--- a/e8/index6.html
+++ b/e8/index6.html
@@ -7,20 +7,24 @@
   </head>
   <body>
     <div class="container">
-      <div class="little"></div>
-      <div class="little"></div>
-      <div class="little"></div>
-      <div class="little"></div>
-      <div class="little"></div>
-      <div class="little"></div>
-      <div class="tall"></div>
-      <div class="container2">
+      <div class="container1">
+        <div class="little"></div>
+        <div class="little"></div>
         <div class="little"></div>
         <div class="medium"></div>
         <div class="little"></div>
       </div>
-      <div class="doublemedium"></div>
-      <div class="doublemedium"></div>
+      <div class="container1">
+        <div class="little"></div>
+        <div class="little"></div>
+        <div class="doublemedium"></div>
+      </div>
+      <div class="container1">
+        <div class="little"></div>
+        <div class="little"></div>
+        <div class="doublemedium"></div>
+      </div>
+      <div class="tall"></div>
     </div>
   </body>
 </html>
