--- a/Project 2/index/index.html
+++ b/Project 2/index/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body id="images">
-    <p>Desktop and Mobile</p>
+    <p>Desktop and Mobile Wireframes</p>
     <img src="../proj2_wf_1.jpeg">
     <img src="../proj2_wf_2.jpeg">
   </body>
