--- a/Project 2/index/index3.html
+++ b/Project 2/index/index3.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
   </head>
   <body id="images">
+    <p>Second Draft</p>
     <p>320px</p>
     <img src="../secondDraft/320.png">
     <p>768px</p>
