--- a/Project 2/index/openingindex.html
+++ b/Project 2/index/openingindex.html
@@ -11,6 +11,7 @@
       <li><a href="index.html">Wireframes</a></li>
       <li><a href="index2.html">First Draft</a></li>
       <li><a href="index3.html">Second Draft</a></li>
+      <li><a href="index4.html">Final</a></li>
     </ul>
   </body>
 </html>
