--- a/e12/index2.html
+++ b/e12/index2.html
@@ -8,12 +8,11 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>Little Women</h1>
-        <h2>Louisa May Alcott</h2>
+        <h1>The Jungle</h1>
+        <h3>Upton Sinclair</h3>
       </div>
       <div class="mainText">
-        <h3>Chapter 1</h3>
-        <h4>Playing Pilgrims</h4>
+        <h2>Chapter 1</h2>
         <p>Chapter text goes here.</p>
       </div>
     </div>
