--- a/e12/index.html
+++ b/e12/index.html
@@ -11,9 +11,11 @@
         <h1>Little Women</h1>
         <h2>Louisa May Alcott</h2>
       </div>
-      <div class="mainText">
-        <h3>Chapter 1</h3>
-        <h4>Playing Pilgrims</h4>
+      <div class="titles">
+        <h3>CHAPTER ONE</h3>
+        <h4>PLAYING PILGRIMS</h4>
+      </div>
+      <div class="chapterText">
         <p>Chapter text goes here.</p>
       </div>
     </div>
